# local_leetcode

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: feature-request.md
examples/: 01_solution.cpp  02_design.cpp  03_overload.cpp  04_void_return.cpp  05_vector_of_pointers.cpp  06_ndim_vector_of_pointers.cpp
examples/Inputs/: 01_solution.txt  02_design.txt  03_overload.txt  04_void_return.txt  05_vector_of_pointers.txt  06_ndim_vector_of_pointers.txt
include/: local_leetcode.hpp
include/core/: classes.hpp  core.hpp  input_parameter.hpp
include/data_structure/: data_structure.hpp
include/io/: destroyer.hpp  io.hpp  parser.hpp  printer.hpp
include/misc/: property.hpp  traits.hpp  utility.hpp
src/: CMakeLists.txt
src/data_structure/: data_structure.cpp
src/io/: parser.cpp  printer.cpp
src/misc/: utility.cpp
